--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -6,6 +6,12 @@
 
 @section Styles{
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
+    <style>
+        .disabledbutton {
+            pointer-events: none;
+            opacity: 0.4;
+        }
+    </style>
 }
 
 <div class="data-content p-4 text-left">
@@ -169,7 +175,7 @@
             </div>
 
             <div class="col-md-8">
-                <div class="catalog-list">
+                <div class="catalog-list" id="catalogList">
                     <a href="/Carriers/Operators/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
@@ -250,11 +256,9 @@
                 var normalFill = $("#rateYo").rateYo("option", "rating");
                 jsonData["NivelServicio"] = normalFill;
                 jsonData["id"] = @id;
-                console.log(jsonData);
 
                 if (parseInt(@id) == 0) {
                     $.post("/Carriers/setCarriers", jsonData, function (res) {
-                        console.log(res);
                         $(location).attr('href', '/Carriers/formCarriers/' + res.id);
                         dToast("success", "Registro guardado exitosamente.", "Registrado");
                     }).fail(function (error) {
@@ -263,7 +267,6 @@
                     });
                 } else {
                     $.post("/Carriers/putCarriers",jsonData, function (res) {
-                        console.log(res);
                         dToast("success", "Registro actualizado exitosamente.", "Registrado");
                     }).fail(function (error) {
                         dToast("error", "Error al tratar de actualizar el registro", "Error");
@@ -317,6 +320,9 @@
                     fullStar: true
                 });
                 $("#idTransportista").val("0000");
+                $("#catalogList").addClass("disabledbutton");
+
+
             }
         }
 
