--- a/KLS_WEB/KLS_WEB/Views/Catalogs/State/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/State/Index.cshtml
@@ -3,13 +3,18 @@
 }
 
 <div class="p-4">
-    <div class="text-left d-flex mb-3">
-        <a href="/Catalogs/Geografia">
-            <div class="material-icons icon-red">arrow_back</div>
-        </a>
-        <div class="text-uppercase poppins medium size-24 pl-2">ESTADOS</div>
-        <div style="padding-left:10%;">
-            <button class="btn btn-sm btn-dark" onclick="showModal('AGREGAR','Agregar');">
+    <div class="d-flex flex-nowrap">
+        <div class="p-2">
+            <div class="text-left d-flex p-2">
+                <a href="/Catalogs/Geografia">
+                    <div class="material-icons icon-red">arrow_back</div>
+                </a>
+                <div class="text-uppercase poppins medium size-24 pl-2">ESTADOS</div>
+            </div>
+        </div>
+
+        <div class="ml-auto p-2">
+            <button class="btn btn-sm btn-secondary" onclick="showModal('AGREGAR','Agregar');">
                 <span class="material-icons">
                     add
                 </span>
